fix: 이미지 상세 조회 수정 (#28)